--- a/SurveyFinalAssignment.Rmd
+++ b/SurveyFinalAssignment.Rmd
@@ -40,15 +40,13 @@ It is a popular method because when carried out correctly, it leads to (almost) 
 **Design Weights**
 
 *2. Despite the complex data structure, the design weights as included in the variable "a_psnenip_xd" have a very low variance. Can you explain why this is the case?*
-As the following table shows, the variance in the design weight variable is ...
+As the following table shows, the variance in the design weight variable is `r var(society$a_psnenip_xd)`. With a mean of `r mean(society$a_psnenip_xd)`, the coefficient of variation is only `r sqrt(var(society$a_psnenip_xd))/mean(society$a_psnenip_xd)`.
 ```{r} 
 Var. <- var(society$a_psnenip_xd) #compute variance in the design weight variable
 Descr. <- cbind(t(summary(society$a_psnenip_xd)), Var.) #combine with other descriptive statistics
 round(Descr., 2) #print with only two decimals
 ```
-The low variance is due to rescaling of the weights, as explained in the IP User Guide (p. 56): "Each set of weights has been scaled by a constant factor to produce a mean of one amongst cases eligible to receive the weight". Rescaling, truncating, or smoothing of weights are techniques to inhibit the effect of a single observation on population estimates (Lohr, **year**). 
-
-Lower MSE (Lohr, p. 286), and application from IP User Guide.
+The low variance is due to rescaling of the weights, as explained in the IP User Guide (p. 56): "Each set of weights has been scaled by a constant factor to produce a mean of one amongst cases eligible to receive the weight". That is, the design weights are standardized on one. Rescaling, truncating, or smoothing of weights are techniques to inhibit the effect of a single observation on population estimates and its variance. Trimming may yield biased estimates, but is shown to decrease the mean square error (MSE; Lohr, 2010). 
 
 *3. Apart from the design weight, an enumerated design weight "a_psnenip_xw" is also included. Please show using syntax in R how you can calculate this weight.*
 
